Links list +  login + logout

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
 				<li ng-class="navClass('createAccount')" ng-show="!isLogged"><a ng-href="#/create-account">Create Account</a></li>
 				<li ng-class="navClass('signIn')" ng-show="!isLogged"><a ng-href="#/sign-in">Sign In</a></li>
 				<li ng-class="navClass('search')" ng-show="isLogged"><a ng-href="#/search">Search</a></li>
+				<li ng-class="navClass('links')" ng-show="isLogged"><a ng-href="#/links">My Links</a></li>
 				<li ng-class="navClass('logout')" ng-show="isLogged"><a ng-href="#/logout">Logout</a></li>
 			</ul>
 			<h3 class="text-muted">Bookmarks</h3>
@@ -77,6 +78,7 @@
 <script src="scripts/controllers/users.js"></script>
 <script src="scripts/services/links.js"></script>
 <script src="scripts/controllers/common.js"></script>
+<script src="scripts/services/users.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
