--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 	<title>Bookmarks</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width">
+	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<!-- build:css styles/vendor.css -->
 	<!-- bower:css -->
@@ -24,23 +25,50 @@
 	<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->
 
-	<div class="container">
-		<div class="header">
-			<ul class="nav nav-pills pull-right" ng-controller="NavCtrl">
-				<li ng-class="navClass('home')"><a ng-href="#">Home</a></li>
-				<li ng-class="navClass('createAccount')" ng-show="!isLogged"><a ng-href="#/create-account">Create Account</a></li>
-				<li ng-class="navClass('signIn')" ng-show="!isLogged"><a ng-href="#/sign-in">Sign In</a></li>
-				<li ng-class="navClass('search')" ng-show="isLogged"><a ng-href="#/search">Search</a></li>
-				<li ng-class="navClass('links')" ng-show="isLogged"><a ng-href="#/links">My Links</a></li>
-				<li ng-class="navClass('logout')" ng-show="isLogged"><a ng-href="#/logout">Logout</a></li>
-			</ul>
-			<h3 class="text-muted">Bookmarks</h3>
+	<div class="navbar navbar-fixed-top" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">Websterday</a>
+			</div>
+			<div class="collapse navbar-collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a ng-href="#">Home</a></li>
+					<li ng-show="!isLogged"><a ng-href="#/create-account">Create Account</a></li>
+					<li ng-show="!isLogged"><a ng-href="#/sign-in">Sign In</a></li>
+					<li ng-show="isLogged"><a ng-href="#/search">Search</a></li>
+					<li ng-show="isLogged"><a ng-href="#/links">History</a></li>
+					<li ng-show="isLogged"><a ng-href="#">Account</a></li>
+					<li ng-show="isLogged"><a ng-href="#">Contact</a></li>
+					<li ng-show="isLogged"><a ng-href="#/logout"><span class="glyphicon glyphicon-off"></span></a></li>
+				</ul>
+			</div>
 		</div>
+	</div>
 
-		<div class="row marketing" ng-view=""></div>
+	<div class="container" ng-view=""></div>
 
-		<div class="footer">
-			<p>Bookmarks &copy; 2014. All Rights Reserved.</p>
+	<div id="footer">
+		<div class="container">
+			<div style="margin-top: 40px; float: left">
+				<p style="display: inline; font-size: 20px; border-bottom: 1px solid #ff551a">About</p>
+				<p style="margin-top: 20px">Websteraday is an application to help you to remember where you browse.</p>
+			</div>
+
+			<div id="social">
+				<a href="#" rel="nofollow" style="margin-right: 5px" title="Our Facebook page"><i class="fa fa-facebook-square"></i></a>
+				<a href="#" rel="nofollow" style="margin: 0 5px" title="Follow us on Twitter"><i class="fa fa-twitter-square"></i></a>
+				<a href="https://github.com/skurty/bookmarks.git" target="_blank"  rel="nofollow" style="margin-left: 5px" title="The source code on GitHub"><i class="fa fa-github-square"></i></a>
+			</div>
+
+			<div class="clear"></div>
+
+			<p id="copyright">Bookmarks &copy; 2014. All Rights Reserved. <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
 		</div>
 	</div>
 
@@ -75,10 +103,10 @@
 	<script src="scripts/app.js"></script>
 	<script src="scripts/controllers/main.js"></script>
 	<script src="scripts/controllers/links.js"></script>
-<script src="scripts/controllers/users.js"></script>
-<script src="scripts/services/links.js"></script>
-<script src="scripts/controllers/common.js"></script>
-<script src="scripts/services/users.js"></script>
+	<script src="scripts/controllers/users.js"></script>
+	<script src="scripts/services/links.js"></script>
+	<script src="scripts/controllers/common.js"></script>
+	<script src="scripts/services/users.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
