--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
 					<li ng-show="isLogged"><a ng-href="#/search">Search</a></li>
 					<li ng-show="isLogged"><a ng-href="#/links">History</a></li>
 					<li ng-show="isLogged"><a ng-href="#">Account</a></li>
-					<li ng-show="isLogged"><a ng-href="#">Contact</a></li>
+					<li><a ng-href="#/contact">Contact</a></li>
 					<li ng-show="isLogged"><a ng-href="#/logout"><span class="glyphicon glyphicon-off"></span></a></li>
 				</ul>
 			</div>
@@ -104,9 +104,11 @@
 	<script src="scripts/controllers/main.js"></script>
 	<script src="scripts/controllers/links.js"></script>
 	<script src="scripts/controllers/users.js"></script>
+	<script src="scripts/controllers/contact.js"></script>
 	<script src="scripts/services/links.js"></script>
 	<script src="scripts/controllers/common.js"></script>
 	<script src="scripts/services/users.js"></script>
+	<script src="scripts/services/contact.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
