WS url in a factory

--- a/app/index.html
+++ b/app/index.html
@@ -101,14 +101,15 @@
 
 	<!-- build:js({.tmp,app}) scripts/scripts.js -->
 	<script src="scripts/app.js"></script>
-	<script src="scripts/controllers/main.js"></script>
-	<script src="scripts/controllers/links.js"></script>
-	<script src="scripts/controllers/users.js"></script>
-	<script src="scripts/controllers/contact.js"></script>
-	<script src="scripts/services/links.js"></script>
 	<script src="scripts/controllers/common.js"></script>
-	<script src="scripts/services/users.js"></script>
+	<script src="scripts/controllers/contact.js"></script>
+	<script src="scripts/controllers/links.js"></script>
+	<script src="scripts/controllers/main.js"></script>
+	<script src="scripts/controllers/users.js"></script>
+	<script src="scripts/services/common.js"></script>
 	<script src="scripts/services/contact.js"></script>
+	<script src="scripts/services/links.js"></script>
+	<script src="scripts/services/users.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
