Token for factories + add account

--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
 					<li ng-show="!isLogged"><a ng-href="#/sign-in">Sign In</a></li>
 					<li ng-show="isLogged"><a ng-href="#/search">Search</a></li>
 					<li ng-show="isLogged"><a ng-href="#/links">History</a></li>
-					<li ng-show="isLogged"><a ng-href="#">Account</a></li>
+					<li ng-show="isLogged"><a ng-href="#/account">Account</a></li>
 					<li><a ng-href="#/contact">Contact</a></li>
 					<li ng-show="isLogged"><a ng-href="#/logout"><span class="glyphicon glyphicon-off"></span></a></li>
 				</ul>
