--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,8 @@
 	<!-- build:css styles/vendor.css -->
 	<!-- bower:css -->
 	<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css">
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,300,100,700,900,500">
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700">
 	<!-- endbower -->
 	<!-- endbuild -->
 	<!-- build:css({.tmp,app}) styles/main.css -->
@@ -37,14 +39,14 @@
 				<a class="navbar-brand" href="#">Websterday</a>
 			</div>
 			<div class="collapse navbar-collapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a ng-href="#">Home</a></li>
-					<li ng-show="!isLogged"><a ng-href="#/create-account">Create Account</a></li>
-					<li ng-show="!isLogged"><a ng-href="#/sign-in">Sign In</a></li>
-					<li ng-show="isLogged"><a ng-href="#/search">Search</a></li>
-					<li ng-show="isLogged"><a ng-href="#/links">History</a></li>
-					<li ng-show="isLogged"><a ng-href="#/account">Account</a></li>
-					<li><a ng-href="#/contact">Contact</a></li>
+				<ul class="nav navbar-nav navbar-right" ng-controller="NavCtrl">
+					<li ng-class="navClass('home')"><a ng-href="#">Home</a></li>
+					<li ng-class="navClass('create-account')" ng-show="!isLogged"><a ng-href="#/create-account">Create Account</a></li>
+					<li ng-class="navClass('sign-in')" ng-show="!isLogged"><a ng-href="#/sign-in">Sign In</a></li>
+					<li ng-class="navClass('search')" ng-show="isLogged"><a ng-href="#/search">Search</a></li>
+					<li ng-class="navClass('links')" ng-show="isLogged"><a ng-href="#/links">History</a></li>
+					<li ng-class="navClass('account')" ng-show="isLogged"><a ng-href="#/account">Account</a></li>
+					<li ng-class="navClass('contact')"><a ng-href="#/contact">Contact</a></li>
 					<li ng-show="isLogged"><a ng-href="#/logout"><span class="glyphicon glyphicon-off"></span></a></li>
 				</ul>
 			</div>
