--- a/app/index.html
+++ b/app/index.html
@@ -98,6 +98,7 @@
 	<script src="lib/angular-resource/angular-resource.js"></script>
 	<script src="lib/angular-cookies/angular-cookies.js"></script>
 	<script src="lib/angular-route/angular-route.js"></script>
+	<script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 	<!-- endbower -->
 	<!-- endbuild -->
 
