Add a link + start edit folder and link

--- a/app/index.html
+++ b/app/index.html
@@ -113,6 +113,7 @@
 	<script src="scripts/services/contact.js"></script>
 	<script src="scripts/services/links.js"></script>
 	<script src="scripts/services/users.js"></script>
+	<script src="scripts/services/folder.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
