--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
 	<!-- build:css styles/vendor.css -->
 	<!-- bower:css -->
 	<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css">
+	<link rel="stylesheet" href="lib/angular-growl/build/angular-growl.min.css">
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,300,100,700,900,500">
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700">
 	<!-- endbower -->
@@ -74,6 +75,8 @@
 		</div>
 	</div>
 
+	<div growl></div>
+
 	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
 	<!--  <script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -98,7 +101,9 @@
 	<script src="lib/angular-resource/angular-resource.js"></script>
 	<script src="lib/angular-cookies/angular-cookies.js"></script>
 	<script src="lib/angular-route/angular-route.js"></script>
+	<script src="lib/angular-animate/angular-animate.min.js"></script>
 	<script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+	<script src="lib/angular-growl/build/angular-growl.min.js"></script>
 	<!-- endbower -->
 	<!-- endbuild -->
 
