--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width">
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link rel="icon" href="favicon.ico" />
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<!-- build:css styles/vendor.css -->
 	<!-- bower:css -->
