--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,7 @@
 
 			<div class="clear"></div>
 
-			<p id="copyright">Bookmarks &copy; 2014. All Rights Reserved. <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+			<p id="copyright">Websterday &copy; 2014. All Rights Reserved. <a href="#/privacy_policy">Privacy Policy</a> | <a href="#/terms_of_service">Terms of Service</a></p>
 		</div>
 	</div>
 
