--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Websterday</a>
+				<a class="navbar-brand" href="#"><span class="first">W</span>ebsterday</a>
 			</div>
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right" ng-controller="NavCtrl">
