--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,7 @@
 			<div id="social">
 				<a href="#" rel="nofollow" style="margin-right: 5px" title="Our Facebook page"><i class="fa fa-facebook-square"></i></a>
 				<a href="#" rel="nofollow" style="margin: 0 5px" title="Follow us on Twitter"><i class="fa fa-twitter-square"></i></a>
-				<a href="https://github.com/skurty/bookmarks.git" target="_blank"  rel="nofollow" style="margin-left: 5px" title="The source code on GitHub"><i class="fa fa-github-square"></i></a>
+				<a href="https://github.com/websterday/websterday.git" target="_blank" rel="nofollow" style="margin-left: 5px" title="The source code on GitHub"><i class="fa fa-github-square"></i></a>
 			</div>
 
 			<div class="clear"></div>
