Links list : truncate

--- a/app/index.html
+++ b/app/index.html
@@ -105,6 +105,7 @@
 	<script src="lib/angular-animate/angular-animate.min.js"></script>
 	<script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 	<script src="lib/angular-growl/build/angular-growl.min.js"></script>
+	<script src="lib/angular-truncate/dist/angular-truncate.min.js"></script>
 	<!-- endbower -->
 	<!-- endbuild -->
 
